fix: add overflow config

--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -23,7 +23,7 @@ pre {
 
   code {
     padding: 0;
-    overflow-x: scroll;
+    overflow: auto hidden;
   }
 
   img {
